--- a/index.html
+++ b/index.html
@@ -37,37 +37,38 @@
         }
         return gk_fileData[filename] || "";
         }
-        </script><!DOCTYPE html>
+        </script>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Horário de Saída</title>
-  <!-- Integração do Tailwind CSS via CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
   <link rel="manifest" href="manifest.json">
+  <!-- Firebase SDKs (versão compatível) -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-database-compat.js"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
-  <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md">
-    <h1 class="text-2xl font-bold mb-4 text-center text-blue-600">Horário de Saída</h1>
-    <div class="space-y-4">
-      <div>
-        <label for="entryTime" class="block text-sm font-medium text-gray-700">Horário de Entrada</label>
-        <input type="time" id="entryTime" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50">
-      </div>
-      <div>
-        <label for="lunchStart" class="block text-sm font-medium text-gray-700">Saída para Almoço</label>
-        <input type="time" id="lunchStart" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50">
-      </div>
-      <div>
-        <label for="lunchEnd" class="block text-sm font-medium text-gray-700">Volta do Almoço</label>
-        <input type="time" id="lunchEnd" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50">
-      </div>
-      <div class="text-center">
-        <p class="text-lg font-semibold text-gray-800">Saída: <span id="exitTime" class="text-indigo-600">--:--</span></p>
-      </div>
+  <div class="bg-white p-6 rounded-lg shadow-lg max-w-md w-full">
+    <h1 class="text-2xl font-bold mb-4 text-center">Horário de Saída</h1>
+    <div class="mb-4">
+      <label class="block text-gray-700">Horário de Entrada</label>
+      <input type="time" id="entryTime" class="mt-1 block w-full p-2 border rounded">
     </div>
-    <script src="script.js"></script>
+    <div class="mb-4">
+      <label class="block text-gray-700">Saída para Almoço</label>
+      <input type="time" id="lunchStart" class="mt-1 block w-full p-2 border rounded">
+    </div>
+    <div class="mb-4">
+      <label class="block text-gray-700">Volta do Almoço</label>
+      <input type="time" id="lunchEnd" class="mt-1 block w-full p-2 border rounded">
+    </div>
+    <div>
+      <label class="block text-gray-700">Saída: <span id="exitTime" class="font-bold">--:--</span></label>
+    </div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
