--- a/index.html
+++ b/index.html
@@ -37,38 +37,44 @@
         }
         return gk_fileData[filename] || "";
         }
-        </script>
-<!DOCTYPE html>
+        </script><!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Horário de Saída</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="manifest" href="manifest.json">
-  <!-- Firebase SDKs (versão compatível) -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-database-compat.js"></script>
+  <!-- Ignorando favicon.ico por ora -->
+  <!-- Incluir Tailwind CSS via CDN (para desenvolvimento) -->
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-  <div class="bg-white p-6 rounded-lg shadow-lg max-w-md w-full">
-    <h1 class="text-2xl font-bold mb-4 text-center">Horário de Saída</h1>
-    <div class="mb-4">
-      <label class="block text-gray-700">Horário de Entrada</label>
-      <input type="time" id="entryTime" class="mt-1 block w-full p-2 border rounded">
-    </div>
-    <div class="mb-4">
-      <label class="block text-gray-700">Saída para Almoço</label>
-      <input type="time" id="lunchStart" class="mt-1 block w-full p-2 border rounded">
-    </div>
-    <div class="mb-4">
-      <label class="block text-gray-700">Volta do Almoço</label>
-      <input type="time" id="lunchEnd" class="mt-1 block w-full p-2 border rounded">
-    </div>
-    <div>
-      <label class="block text-gray-700">Saída: <span id="exitTime" class="font-bold">--:--</span></label>
-    </div>
+<body>
+  <div class="container mx-auto p-4">
+    <h1 class="text-2xl font-bold mb-4">Horário de Saída</h1>
+    <label class="block mb-2">
+      Horário de Entrada
+      <input type="time" id="entryTime" class="border p-2 rounded w-full">
+    </label>
+    <br>
+    <label class="block mb-2">
+      Saída para Almoço
+      <input type="time" id="lunchStart" class="border p-2 rounded w-full">
+    </label>
+    <br>
+    <label class="block mb-2">
+      Volta do Almoço
+      <input type="time" id="lunchEnd" class="border p-2 rounded w-full">
+    </label>
+    <br>
+    <label class="text-lg">
+      Saída: <span id="exitTime" class="font-bold">--:--</span>
+    </label>
   </div>
+
+  <!-- Adicionar o SDK do Firebase via CDN -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
