--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Horário de Saída</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="/AppCalculoHoras/manifest.json">
   <!-- Ignorando favicon.ico por ora -->
   <!-- Incluir Tailwind CSS via CDN (para desenvolvimento) -->
   <script src="https://cdn.tailwindcss.com"></script>
