--- a/index.html
+++ b/index.html
@@ -44,32 +44,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Horário de Saída</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="manifest" href="/AppCalculoHoras/manifest.json">
   <!-- Ignorando favicon.ico por ora -->
   <!-- Incluir Tailwind CSS via CDN (para desenvolvimento) -->
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-  <div class="container mx-auto p-4">
-    <h1 class="text-2xl font-bold mb-4">Horário de Saída</h1>
-    <label class="block mb-2">
-      Horário de Entrada
-      <input type="time" id="entryTime" class="border p-2 rounded w-full">
-    </label>
-    <br>
-    <label class="block mb-2">
-      Saída para Almoço
-      <input type="time" id="lunchStart" class="border p-2 rounded w-full">
-    </label>
-    <br>
-    <label class="block mb-2">
-      Volta do Almoço
-      <input type="time" id="lunchEnd" class="border p-2 rounded w-full">
-    </label>
-    <br>
-    <label class="text-lg">
-      Saída: <span id="exitTime" class="font-bold">--:--</span>
-    </label>
+<body class="bg-gray-100 flex items-center justify-center h-screen">
+  <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md">
+    <h1 class="text-2xl font-bold text-center text-indigo-600 mb-4">Horário de Saída</h1>
+    <div class="space-y-4">
+      <div>
+        <label class="block text-sm font-medium text-gray-700">Horário de Entrada</label>
+        <input type="time" id="entryTime" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required>
+      </div>
+      <div>
+        <label class="block text-sm font-medium text-gray-700">Saída para Almoço</label>
+        <input type="time" id="lunchStart" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required>
+      </div>
+      <div>
+        <label class="block text-sm font-medium text-gray-700">Volta do Almoço</label>
+        <input type="time" id="lunchEnd" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required>
+      </div>
+      <div class="text-center">
+        <p class="text-lg font-semibold text-gray-800">Saída: <span id="exitTime" class="text-indigo-600">--:--</span></p>
+      </div>
+    </div>
   </div>
 
   <!-- Adicionar o SDK do Firebase (versão compatível) via CDN -->
