--- a/index.html
+++ b/index.html
@@ -46,11 +46,9 @@
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="manifest" href="/AppCalculoHoras/manifest.json">
-  <!-- Ignorando favicon.ico por ora -->
-  <!-- Incluir Tailwind CSS via CDN (para desenvolvimento) -->
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="icon.png">
+  <meta name="theme-color" content="#4f46e5">
 </head>
-<body>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
   <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md">
     <h1 class="text-2xl font-bold text-center text-indigo-600 mb-4">Horário de Saída</h1>
